{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 90,
  "lineage": "16e73ff5-e077-c5e1-7fe8-341395ae1c49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BACKEND",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:891377083606:instance/i-0245f91addf530eb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0245f91addf530eb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d9d5738e7e4b425b"
              }
            ],
            "primary_network_interface_id": "eni-0d9d5738e7e4b425b",
            "private_dns": "ip-172-31-23-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.204",
            "public_dns": "ec2-54-196-105-118.compute-1.amazonaws.com",
            "public_ip": "54.196.105.118",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb0fd4605d7a4d47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "backend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b402f36260135330",
            "tags": {
              "Name": "Backend_Server"
            },
            "tags_all": {
              "Name": "Backend_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0dece122ca6280d7f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "i-0245f91addf530eb8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:891377083606:instance/i-0a40295b778a5b91d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a40295b778a5b91d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0005273c2d2355084"
              }
            ],
            "primary_network_interface_id": "eni-0005273c2d2355084",
            "private_dns": "ip-172-31-24-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.211",
            "public_dns": "ec2-54-221-148-239.compute-1.amazonaws.com",
            "public_ip": "54.221.148.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eb02ad6d0bad4544",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "bastion-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b402f36260135330",
            "tags": {
              "Name": "Bastion_Host"
            },
            "tags_all": {
              "Name": "Bastion_Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2c15a77d89126f4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "i-0a40295b778a5b91d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "FRONTEND",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:891377083606:instance/i-0655c012346beba93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0655c012346beba93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-037246e15fd71bcca"
              }
            ],
            "primary_network_interface_id": "eni-037246e15fd71bcca",
            "private_dns": "ip-172-31-22-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.167",
            "public_dns": "ec2-54-145-14-135.compute-1.amazonaws.com",
            "public_ip": "54.145.14.135",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098da1d3462ba7760",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "frontend-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b402f36260135330",
            "tags": {
              "Name": "FrontEnd_Server"
            },
            "tags_all": {
              "Name": "FrontEnd_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e77b91d5a2a06fbc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "i-0655c012346beba93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0e2c15a77d89126f4",
            "description": "Allow SSH from internet to Bastion",
            "egress": [],
            "id": "sg-0e2c15a77d89126f4",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0e2c15a77d89126f4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0dece122ca6280d7f",
            "description": "Allow HTTP from Frontend and SSH from Bastion",
            "egress": [],
            "id": "sg-0dece122ca6280d7f",
            "ingress": [],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0dece122ca6280d7f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group/sg-0e77b91d5a2a06fbc",
            "description": "Allow HTTP from internet and SSH from Bastion",
            "egress": [],
            "id": "sg-0e77b91d5a2a06fbc",
            "ingress": [],
            "name": "frontend-sg",
            "name_prefix": "",
            "owner_id": "891377083606",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c551cb5f0de9a0c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sg-0e77b91d5a2a06fbc",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "backend_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-08f82e810c4e587a8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08f82e810c4e587a8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0dece122ca6280d7f",
            "security_group_rule_id": "sgr-08f82e810c4e587a8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-08f82e810c4e587a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-09aa9e759e9a9e547",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09aa9e759e9a9e547",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e2c15a77d89126f4",
            "security_group_rule_id": "sgr-09aa9e759e9a9e547",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-09aa9e759e9a9e547",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "frontend_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-041e80a245ba9b3ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041e80a245ba9b3ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e77b91d5a2a06fbc",
            "security_group_rule_id": "sgr-041e80a245ba9b3ae",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-041e80a245ba9b3ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_http_from_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0557429e3b31c9231",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0557429e3b31c9231",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e77b91d5a2a06fbc",
            "region": "us-east-1",
            "security_group_id": "sg-0dece122ca6280d7f",
            "security_group_rule_id": "sgr-0557429e3b31c9231",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0557429e3b31c9231",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.backend_sg",
            "aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "backend_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0447627bec22d86b3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0447627bec22d86b3",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e2c15a77d89126f4",
            "region": "us-east-1",
            "security_group_id": "sg-0dece122ca6280d7f",
            "security_group_rule_id": "sgr-0447627bec22d86b3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0447627bec22d86b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion_sg",
            "aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-09487f8810b98f894",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09487f8810b98f894",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e2c15a77d89126f4",
            "security_group_rule_id": "sgr-09487f8810b98f894",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-09487f8810b98f894",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0bf751ada6ea8d32f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0bf751ada6ea8d32f",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e77b91d5a2a06fbc",
            "security_group_rule_id": "sgr-0bf751ada6ea8d32f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0bf751ada6ea8d32f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.frontend_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "frontend_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377083606:security-group-rule/sgr-0c5ad6dc87a425e33",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c5ad6dc87a425e33",
            "ip_protocol": "TCP",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e2c15a77d89126f4",
            "region": "us-east-1",
            "security_group_id": "sg-0e77b91d5a2a06fbc",
            "security_group_rule_id": "sgr-0c5ad6dc87a425e33",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377083606",
            "id": "sgr-0c5ad6dc87a425e33",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Bastion_sg",
            "aws_security_group.frontend_sg"
          ]
        }
      ]
    }
  ]
}